--- a/MonetDB/debian/changelog
+++ b/MonetDB/debian/changelog
@@ -1,3 +1,9 @@
+monetdb (1.40.1-20101029) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 29 Oct 2010 10:30:29 +0200
+
 monetdb (1.38.5-20100824) unstable; urgency=low
 
   * Rebuilt.
