--- a/MonetDB4/debian/changelog
+++ b/MonetDB4/debian/changelog
@@ -1,3 +1,9 @@
+monetdb4-server (4.40.1-20101029) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 29 Oct 2010 10:30:29 +0200
+
 monetdb4-server (4.38.5-20100824) unstable; urgency=low
 
   * Rebuilt.
