--- a/MonetDB5/debian/changelog
+++ b/MonetDB5/debian/changelog
@@ -1,3 +1,51 @@
+monetdb5-server (5.22.1-20101029) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 29 Oct 2010 10:30:30 +0200
+
+monetdb5-server (5.22.1-20101029) unstable; urgency=low
+
+  * Resolved a problem with leaking threads, eventually causing new
+    connections to the server to hang, bug #2700
+
+ -- Fabian Groffen <fabian@cwi.nl>  Wed, 27 Oct 2010 10:30:29 +0200
+
+monetdb5-server (5.22.1-20101029) unstable; urgency=low
+
+  * When attempting to insert incorrect UTF-8 sequences in a COPY INTO
+    statement, the error message was truncated.  This is now fixed.
+    Bug 2575.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Mon, 30 Aug 2010 10:30:29 +0200
+
+monetdb5-server (5.22.1-20101029) unstable; urgency=low
+
+  * Debugging the optimizer pipeline The best way is to use mdb.traceOptimizer(str)
+    and inspect the information gathered during the optimization phase.
+    Several optimizers produce more intermediate information, which may
+    shed light on the details.  The optDebug bitvector controls their
+    output. It can be set to a pipeline or a comma separated list of
+    optimizers you would like to trace. It is a server wide property and
+    can not be set dynamically, as it is intended for internal use.
+
+ -- mk@cwi.nl  Tue, 24 Aug 2010 10:30:29 +0200
+
+monetdb5-server (5.22.1-20101029) unstable; urgency=low
+
+  * Added "sequential_pipe" SQL optimizer pipeline that is (and should be kept!)
+    identical to the default pipeline, except that optimizers mitosis & dataflow
+    are omitted.
+
+ -- Stefan Manegold <Stefan.Manegold@cwi.nl>  Tue, 24 Aug 2010 10:30:29 +0200
+
+monetdb5-server (5.22.1-20101029) unstable; urgency=low
+
+  * Added "no_mitosis_pipe" SQL optimizer pipeline that is (and should be kept!)
+    identical to the default pipeline, except that optimizer mitosis is omitted.
+
+ -- Stefan Manegold <Stefan.Manegold@cwi.nl>  Tue, 24 Aug 2010 10:30:29 +0200
+
 monetdb5-server (5.20.5-20100824) unstable; urgency=low
 
   * Rebuilt.
