--- a/geom/debian/changelog
+++ b/geom/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-geom (0.20.1-20101105) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 05 Nov 2010 09:32:12 +0100
+
 monetdb-geom (0.20.1-20101029) unstable; urgency=low
 
   * Rebuilt.
