--- a/testing/debian/changelog
+++ b/testing/debian/changelog
@@ -1,3 +1,15 @@
+monetdb-testing (1.40.1-20101105) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 05 Nov 2010 09:32:14 +0100
+
+monetdb-testing (1.40.1-20101105) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 05 Nov 2010 09:32:13 +0100
+
 monetdb-testing (1.40.1-20101029) unstable; urgency=low
 
   * Rebuilt.
