--- a/MonetDB/debian/changelog
+++ b/MonetDB/debian/changelog
@@ -1,3 +1,9 @@
+monetdb (1.40.1-20101105) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 05 Nov 2010 09:32:11 +0100
+
 monetdb (1.40.1-20101029) unstable; urgency=low
 
   * Rebuilt.
