--- a/pathfinder/debian/changelog
+++ b/pathfinder/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-xquery (0.40.1-20101105) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 05 Nov 2010 09:32:13 +0100
+
 monetdb-xquery (0.40.1-20101029) unstable; urgency=low
 
   * Rebuilt.
