--- a/geom/debian/changelog
+++ b/geom/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-geom (0.20.1-20101109) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 09 Nov 2010 09:34:17 +0100
+
 monetdb-geom (0.20.1-20101105) unstable; urgency=low
 
   * Rebuilt.
