--- a/MonetDB/debian/changelog
+++ b/MonetDB/debian/changelog
@@ -1,3 +1,9 @@
+monetdb (1.40.1-20101110) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 10 Nov 2010 09:17:03 +0100
+
 monetdb (1.40.1-20101109) unstable; urgency=low
 
   * Rebuilt.
