--- a/sql/debian/changelog
+++ b/sql/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-sql (2.40.1-20101110) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 10 Nov 2010 09:17:05 +0100
+
 monetdb-sql (2.40.1-20101109) unstable; urgency=low
 
   * Rebuilt.
