--- a/clients/debian/changelog
+++ b/clients/debian/changelog
@@ -24,7 +24,7 @@ monetdb-client (1.40.1-20101029) unstable; urgency=low
 
 monetdb-client (1.40.1-20101029) unstable; urgency=low
 
-  * Fix crash when the server disconnects during d query
+  * Fix crash when the server disconnects during \d query
 
  -- Fabian Groffen <fabian@cwi.nl>  Thu, 28 Oct 2010 10:30:30 +0200
 
@@ -44,8 +44,8 @@ monetdb-client (1.40.1-20101029) unstable; urgency=low
 
 monetdb-client (1.40.1-20101029) unstable; urgency=low
 
-  * The d and D commands now require a space if they are followed by a
-    table name.  This is to accomodate future expansion where d and D
+  * The \d and \D commands now require a space if they are followed by a
+    table name.  This is to accomodate future expansion where \d and \D
     could be immediately followed by another letter to indicate the type
     of object of interest.
   * Implemented dumping of "external" functions.  This fixes bug 2546.
@@ -75,7 +75,7 @@ monetdb-client (1.40.1-20101029) unstable; urgency=low
     considerably to get improved output.  Most importantly it now omits
     parts of field values or even full columns when the used terminal width
     is insufficient to display the result.  To disable this behaviour,
-    simply set width to -1 (via -w option or w in mclient), or chose
+    simply set width to -1 (via -w option or \w in mclient), or chose
     another rendering mode.
 
  -- Fabian Groffen <fabian@cwi.nl>  Tue, 24 Aug 2010 10:30:30 +0200
