implement bug #2727: allow using INSERT INTO statements in dump
INSERT INTO statements are more portable, and a necessity when using
loaders that have to adhere to a query & answer protocol, such as most
data source abstractions (most well known and standardised ones: ODBC
and JDBC).

--- a/clients/ChangeLog
+++ b/clients/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Fri Dec 10 2010 Fabian Groffen <fabian@cwi.nl>
+- Allow to dump table data using INSERT INTO statements, rather than COPY
+  INTO + CSV data using the -N/--inserts flag of mclient and msqldump.
+  Bug #2727
+
 * Wed Dec  8 2010 Fabian Groffen <fabian@cwi.nl>
 - Added support for \dn to list schemas or describe a specific one
 
