--- a/MonetDB4/debian/changelog
+++ b/MonetDB4/debian/changelog
@@ -1,3 +1,9 @@
+monetdb4-server (4.40.3-20101215) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 15 Dec 2010 09:39:10 +0100
+
 monetdb4-server (4.40.1-20101110) unstable; urgency=low
 
   * Rebuilt.
