--- a/geom/debian/changelog
+++ b/geom/debian/changelog
@@ -1,3 +1,9 @@
+monetdb-geom (0.20.3-20101215) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 15 Dec 2010 09:39:11 +0100
+
 monetdb-geom (0.20.1-20101110) unstable; urgency=low
 
   * Rebuilt.
