--- a/python/debian/changelog
+++ b/python/debian/changelog
@@ -1,3 +1,9 @@
+python-monetdb (1.0-20101215) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 15 Dec 2010 09:39:13 +0100
+
 python-monetdb (0.1-1) unstable; urgency=low
 
   * first release
