--- a/java/ChangeLog
+++ b/java/ChangeLog
@@ -1,3 +1,6 @@
 # ChangeLog file for java
 # This file is updated with Maddlog
 
+* Mon Feb  7 2011 Fabian Groffen <fabian@cwi.nl>
+- Removed XQuery related XRPC wrapper code
+
