Some cleanup + changelog blurb.

--- a/tools/merovingian/client/monetdb.1
+++ b/tools/merovingian/client/monetdb.1
@@ -9,7 +9,7 @@
 .\" Process this file with
 .\" groff -man -Tascii foo.1
 .\"
-.TH MONETDB 1 "NOVEMBER 2012" MonetDB "MonetDB Applications"
+.TH MONETDB 1 2022-09-23 MonetDB "MonetDB Applications"
 .SH NAME
 monetdb \- control a MonetDB Database Server instance
 .SH SYNOPSIS
