--- a/clients/mapiclient/mclient.1
+++ b/clients/mapiclient/mclient.1
@@ -6,7 +6,7 @@
 .\"
 .\" Copyright 1997 - July 2008 CWI, August 2008 - 2022 MonetDB B.V.
 .\"
-.TH MCLIENT 1 "NOVEMBER 2012" MonetDB "MonetDB Applications"
+.TH MCLIENT 1 2022-09-23 MonetDB "MonetDB Applications"
 .SH NAME
 mclient \- the MonetDB command-line tool
 .SH SYNOPSIS
