--- a/sql/ChangeLog
+++ b/sql/ChangeLog
@@ -2,8 +2,17 @@
 # This file is updated with Maddlog
 
 * Wed Feb 15 2023 Lucas Pereira <lucas.pereira@monetdbsolutions.com>
-- SQL function sys.queue() overloaded with sys.queue(username string), SYSADMIN only, allowing to filter the global queue by username or use 'ALL' to retrive the global queue. Calling the function without arguments returns the current user queue.
-- SQL function sys.queue() overloaded with sys.queue(username string), SYSADMIN only, allowing to filter the global queue by username or use 'ALL' to retrieve the global queue. Calling the function without arguments returns the current user queue.
+- SQL function sys.queue() overloaded with sys.queue(username string),
+  SYSADMIN only, allowing to filter the global queue by username or
+  use 'ALL' to retrive the global queue. Calling the function without
+  arguments returns the current user queue.
+- SQL procedures sys.pause(tag bigint), sys.resume(tag bigint),
+  sys.stop(tag bigint) overloaded with sys.pause(tag bigint, username string),
+  sys.resume(tag bigint, username string) and sys.stop(tag bigint, username
+  string), SYSADMIN only, allowing to pause, resume and stop query
+  executions by TAG,USERNAME. The call without arguments is a public
+  procedure giving access to users to pause, resume and stop their
+  own query executions.
 
 * Wed Feb 15 2023 svetlin <svetlin.stalinov@monetdbsolutions.com>
 - Added JDBC/ODBC escape sequences implementation to SQL layer. Now all
