--- a/misc/packages/rpm/changelog
+++ b/misc/packages/rpm/changelog
@@ -1,3 +1,88 @@
+* Tue May 16 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- Rebuilt.
+
+* Tue May 16 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: Warnings and informational messages are now sent to stdout instead of
+  stderr, which means that monetdbd will now log them with the tag MSG
+  instead of ERR.
+
+* Tue Apr 25 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: Fixed parsing of the BBP.dir files when BAT ids grow larger than 2**24
+  (i.e. 100000000 in octal).
+
+* Wed Apr  5 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- sql: When creating a hot snapshot, allow other clients to proceed, even
+  with updating queries.
+
+* Fri Mar 24 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: When processing the WAL, if a to-be-destroyed object cannot be found,
+  don't stop, but keep processing the rest of the WAL.
+
+* Fri Mar 24 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- monetdb5: Client connections are cleaned up better so that we get fewer instances
+  of clients that cannot connect.
+
+* Fri Mar 24 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- sql: Increased the size of a variable counting the number of changes made
+  to the database (e.g. in case more than 2 billion rows are added to
+  a table).
+- sql: Improved cleanup after failures such as failed memory allocations.
+
+* Mon Feb 20 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: A race condition was fixed where certain write-ahead log messages
+  could get intermingled, resulting in a corrupted WAL file.
+- gdk: If opening of a file failed when it was supposed to get memory mapped,
+  an incorrect value was returned to indicate the failure, causing
+  crashes later on.  This has been fixed.
+
+* Mon Feb 13 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: When saving a bat failed for some reason during a low-level commit,
+  this was logged in the log file, but the error was then subsequently
+  ignored, possibly leading to files that are too short or even missing.
+- gdk: The write-ahead log (WAL) is now rotated a bit more efficiently by
+  doing multiple log files in one go (i.e. in one low-level transaction).
+
+* Mon Feb 13 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- sql: An insert into a table from which a column was dropped in a parallel
+  transaction was incorrectly not flagged as a transaction conflict.
+
+* Mon Jan 16 2023 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: Fixed a race condition that could lead to a bat being added to the SQL
+  catalog but nog being made persistent, causing a subsequent restart
+  of the system to fail (and crash).
+
+* Fri Dec 16 2022 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- sql: Added some error checking to prevent crashes.  Errors would mainly
+  occur under memory pressure.
+
+* Wed Dec 14 2022 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: Fixed a race condition where a hash could have been created on a
+  bat using the old bat count while in another thread the bat count
+  got updated.  This would make the hash be based on too small a size,
+  causing failures later on.
+
+* Wed Dec 14 2022 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- sql: Fixed cleanup after a failed allocation where the data being cleaned
+  up was unitialized but still used as pointers to memory that also had
+  to be freed.
+
+* Thu Dec  8 2022 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: When extending a bat failed, the capacity had been updated already and
+  was therefore too large.  This could then later cause a crash.  This has
+  been fixed by only updating the capacity if the extend succeeded.
+
+* Wed Dec  7 2022 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- gdk: A bug was fixed when dealing with copy-on-write memory maps.  These can
+  occur for some bats used by the write-ahead log code when they grow
+  large enough.
+
+* Wed Dec  7 2022 Sjoerd Mullender <sjoerd@acm.org> - 11.43.27-20230516
+- sql: If there was an error in one of the special commands to the server
+  (e.g. setting the reply size for result sets), the server could get
+  into an infinite loop.  This has been fixed.
+- sql: Fixed a double cleanup after a failed allocation in COPY INTO.  The
+  double cleanup could cause a crash due to a race condition it enabled.
+
 * Mon Nov 21 2022 Sjoerd Mullender <sjoerd@acm.org> - 11.43.25-20221121
 - Rebuilt.
 - GH#7336: Selecting from a literal-value table returns wrong values
