Moved contents of ChangeLog.Jun2023 to MonetDB.spec, debian/changelog and ChangeLog-Archive.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,36 @@
+monetdb (11.47.3) unstable; urgency=low
+
+  * Rebuilt.
+  * GH#7344: Database upgrade failure due to user object dependency on
+    system procedure
+  * GH#7378: MonetDB server crashes at sql_trans_copy_key
+  * GH#7379: MonetDB server 11.46.0 crashes at cs_bind_ubat
+  * GH#7380: MonetDB server 11.46.0 crashes at `BLOBcmp`
+  * GH#7381: MonetDB server 11.46.0 crashes at `log_create_delta`
+  * GH#7382: MonetDB server 11.46.0 crashes at `gc_col`
+  * GH#7383: MonetDB server 11.46.0 crashes at `list_append`
+  * GH#7384: MonetDB server 11.46.0 crashes at `__nss_database_lookup`
+  * GH#7386: MonetDB server 11.46.0 crashes in `rel_deps`
+  * GH#7387: MonetDB server 11.46.0 crashes in `rel_sequences`
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 22 Jun 2023 11:58:29 +0200
+
+monetdb (11.47.3) unstable; urgency=low
+
+  * clients: The COPY INTO from file ON CLIENT was extended to also look for a
+    relative path name relative to the file from which the query was read.
+    This is only possible if the name of the query file is known, so when
+    it is specified on the command line or read using the interactive
+    \< command.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 20 Jun 2023 11:58:29 +0200
+
+monetdb (11.47.3) unstable; urgency=low
+
+  * sql: Add MAX_MEMORY and MAX_WORKERS options to the ALTER USER statement
+
+ -- Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>  Fri, 16 Jun 2023 11:58:29 +0200
+
 monetdb (11.47.1) unstable; urgency=low
 
   * Rebuilt.
