--- a/sql/ChangeLog
+++ b/sql/ChangeLog
@@ -1,6 +1,21 @@
 # ChangeLog file for sql
 # This file is updated with Maddlog
 
+* Thu Aug 24 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Added ISO/IEC 9075-11 SQL/Schemata (SQL:2011) with SQL system views:
+   information_schema.schemata
+   information_schema.tables
+   information_schema.views
+   information_schema.columns
+   information_schema.character_sets
+
+  Most views have been extended (after the standard columns) with MonetDB
+  specific information columns such as schema_id, table_id, column_id, etc.
+  This simplifies joins with any sys.* tables/views when needed.
+
+  Note: MonetDB does NOT support catalog qualifiers in object names, so all the
+  _CATALOG columns in these information_schema views will allways contain NULL.
+
 * Fri Jul 7 2023 Niels Nes <niels.nes@monetdbsolutions.com>
 - Added SQL support for: <result offset clause> and <fetch first clause>
   in  <query expression> ::=
