--- a/monetdb5/ChangeLog
+++ b/monetdb5/ChangeLog
@@ -1,3 +1,7 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Wed Sep 13 2023 Sjoerd Mullender <sjoerd@acm.org>
+- Removed the MAL tokenizer module.  It was never usable from SQL and
+  in this form never would be.
+
